# Information-Retrieval-SGames

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py  package-lock.json  package.json
app/engine/: bm25.py  indexer.py  parser.py  session.py
app/public/: challenge.js  client.js  feedback.js  filters.js  highlight.js  style.css
app/templates/: document.html  feedback.html  index.html  statistics.html
app/templates/components/: card.html
collection/: clean.py
collection/models/: document.py
report/: references.bib  report.tex
scraper/: main.py
scraper/sources/: gamejolt.py  itch.py  source.py  steam.py
utils/: env.py  logger.py
